syntax = "proto3";

/*
    generate proto
    protoc proto/clippo.proto --go_out=plugins=grpc:.
*/

package clippo;
option go_package="clippopb";

message ArticleURLRequest {
    string url = 1;
}

message ArticleTitleDescriptionImgResponse {
    string title = 1;
    string description = 2;
    string image = 3;
}

service ArticleService {
    rpc GetArticleTitleDescriptionImg(ArticleURLRequest) returns (ArticleTitleDescriptionImgResponse) {};
}